# templates

./: README.md  flake.nix
.github/ISSUE_TEMPLATE/: language-request.md
.github/scripts/: check.sh
.github/workflows/: check.yml
c/: flake.nix  main.c  makefile
empty/: flake.nix
flutter/: .gitignore  flake.nix
gleam/: .gitignore  README.md  flake.nix  gleam.toml  manifest.toml
gleam/src/: project.gleam
go/: flake.nix  go.mod
haskell/: .gitignore  flake.nix  haskell.cabal
java/: .gitignore  flake.nix
julia/: flake.nix  main.jl
nextjs/: flake.nix
ocaml/: .gitignore  dune-project  flake.nix
ocaml/lib/: dune
ocaml/test/: dune
python/: flake.nix  pyproject.toml
rust/: .gitignore  Cargo.toml  flake.nix
zig/: .gitignore  build.zig  flake.nix
zig/src/: main.zig
