[build-system]
requires = [
  "setuptools >= 40.9.0",
  "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "template"
authors = [
    # {name = "You", email = "you@you.com"},
]
description = "idk"
readme = "README.md"
requires-python = ">=3.10"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
#classifiers = [
#    "Framework :: Django",
#    "Programming Language :: Python :: 3",
#]
dependencies = [
]
dynamic = ["version"]
